fix: change the location of raper

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         const tileSize = 32; // Tamanho de cada bloco (tijolo ou caminho)
         let michaelPos = { x: 1, y: 1 }; // Posição inicial de Michael
-        let raperPos = { x: 1, y: 1 }; // Posição inicial do rapper
+        let raperPos = { x: 5, y: 5 }; // Nova posição inicial do rapper (ex: na coordenada (5,5))
 
         // Função para desenhar o labirinto
         function drawMaze() {
